--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -204,4 +204,36 @@ he:
       by_expiry: "ההצעה נסגרה"
     new_vote: "%{position} להצעה"
     new_comment: "הגיב/ה בדיון"
+    comment_liked: "אהב/ה את התגובה שלך בדיון"
+    user_mentioned: "ציינ/ה אותך בתגובה ב-"
+    membership_requested: "ביקש/ה חברות ל-"
+    membership_request_approved: 'אישר/ה את בקשתך להצטרף ל-'
+    user_added_to_group: "הוסיפ/ה אותך לקבוצה"
+    motion_closing_soon: "ההצעה תסגר בקרוב"
+    motion_blocked: "חסמ/ה את ההצעה"
+    motion_outcome_created: "פרסמ/ה את תוצאות ההצעה"
+    motion_outcome_updated: "עדכנ/ה את תוצאות ההצעה"
+  edit_discussion_context: "עריכת הקשר-הדיון"
+  request_new_group: "התחילו קבוצה"
+  start_new_group: "התחילו קבוצה חדשה"
+  start_new_group_hint: "להתחיל לקבל החלטות"
+  find_a_group: "מצאו קבוצה"
+  find_a_group_hint: "לגלות קבוצות ציבוריות"
+  search_for_group: "חפשו קבוצה..."
+  no_groups_found: "אין קבוצות בשם זה!"
+  no_group_header: "ברוכים הבאים לLoomio Beta"
+  empty_notifications: "אין לך התרעות כרגע."
+  see_all_notifications: "צפו בכל ההתרעות"
+  profile: "פרופיל"
+  email_settings: "הגדרות דואל"
+  sign_out: "התנתקות"
+  sign_in: "התחברות"
+  honeypot_warning: "לא ניתן לייצר חשבון. עבור קוראי-מסך, יש לוודא שהשדה האחרון (הנסתר) נשאר ריק."
+  tagline: "יוצרים עולם בו קל לכל אחד ליטול חלק בהחלטות שמשפיעות עליו."
+  or_sign_in_html: "אם כבר יש לכם חשבון בLoomio, <a href='%{link}' class='%{link_class}'>התחברו כאן</a>"
+  or_link_account_html: "אם כבר יש לכם חשבון בLoomio, <a href='%{link}' class='%{link_class}'>קשרו אליו</a>"
+  click_to_dismiss: "לחצו כאן לביטול ההודעה"
+  generic_confirm: "בטוחים?"
+  discussion_helper_text:
+    header: "ברוכים הבאים לדיון הראשון שלכם"
   translate: "עזרו בתרגום Loomio!"
