--- a/config/locales/gl.yml
+++ b/config/locales/gl.yml
@@ -4,22 +4,22 @@ gl:
       edit:
         title: 'Preferencias de correo'
         when_do_you_want_emails: 'Escríbeme:'
-        email_missed_yesterday: "'Onte en Loomio' - un resumo diario das actividades perdidas"
-        email_when_mentioned: "Cando se me @menciona"
-        email_followed_threads: "Cando hai actividade en fíos que sigo."
+        email_missed_yesterday: "'Onte en Loomio' - un resumo diario das actividades que te perdiches"
+        email_when_mentioned: "Cando me @mencionan"
+        email_followed_threads: "Cando hai actividade nos fíos que sigo."
         email_when_proposal_closing_soon: "24 horas antes do peche dunha proposta"
-        email_new_discussions_and_proposals: 'Novos debates e propostas'
+        email_new_discussions_and_proposals: 'Debates e propostas novos'
         for_these_groups: "Para estes grupos:"
-        submit: "Gardar preferenzas"
+        submit: "Gardar as preferencias"
   explore:
-    header: "Explora grupos públicos"
+    header: "Explora os grupos públicos"
   try_it:
     header: "Proba Loomio"
-    start_a_group: "Comeza un grupo para a toma de decisións na túa comunidade."
+    start_a_group: "Crea un grupo para a toma de decisións na túa comunidade."
     join_the_community: "Únete ao grupo da comunidade Loomio"
     loomio_community_info: "Aquí é onde debatemos e tomamos decisións sobre Loomio."
     explore_groups: "Explora outros grupos en Loomio"
-    explore_groups_info: "Revisa todos estes interesantes grupos en Loomio e únete a eles!"
+    explore_groups_info: "Revisa todos estes grupos interesantes en Loomio e únete a eles!"
   activerecord:
     errors:
       messages:
@@ -29,14 +29,65 @@ gl:
       email: "Non é un enderezo de correo válido"
   attachment:
     error:
-      too_large: "O arquivo que estás a tentar engadir é maior de 50MB, por favor, téntao cun máis cativo."
+      too_large: "O arquivo que tentas subir supera os 50MB, por favor, téntao con un máis pequeno."
+  devise:
+    invitations:
+      invitation_token_invalid: 'Esta invitación xa non é válida!'
+      updated: 'Conta creada.'
+      no_invitations_remaining: "Non fican invitacións"
+    mailer:
+      invitation_instructions:
+        subject: 'Alguén invitoute a uníreste ao seu grupo de Loomio'
   error:
-    cant_join_subgroup: "Non podes unirte a un subgrupo se non pertences ao seu grupo de nivel superior."
-    cant_modify_position: "Esta proposta xa finalizou."
-    cant_state_position: "Esta proposta xa finalizou."
+    access_denied: "Non tes permisos para facer iso."
+    cant_join_subgroup: "Non podes unirte a un subgrupo se non pertences ao seu grupo raíz."
+    cant_modify_position: "Esta proposta pechouse."
+    cant_state_position: "Esta proposta pechouse."
+    cant_view_member_profile: "Non podes ver o perfil do/a membro porque non estás no mesmo grupo."
+    contribution: "Por favor, autentícate para contribuír."
     discussion_not_created: "Non se puido crear o debate."
+    discussion_not_moved: "Non tes permisos para mover este debate a %{destination_group.name}"
     group_not_archived: "O grupo non puido arquivarse."
+    invalid_close_date: "Data de peche inválida, por favor, comproba que o día non pasou aínda."
+    invalid_email: "Por favor, introduce polo menos un enderezo de correo válido"
+    image_upload_fail: "Non se puido subir a imaxe. Asegúrate de que a imaxe é inferior a 1 MB e de que é un ficheiro .jpeg, .png ou .gif."
+    motion_closing_inputs: "Data de peche inválida"
+    motion_outcome_not_created: "Non se puido publicar o resultado."
+    motion_outcome_not_updated: "Non se puido publicar o resultado."
+    only_group_coordinator_destroy: "Non podes deixar o grupo porque es o/a único/a coordenador/a. Podes desactivar o teu grupo a través do despregable de opcións ou <a href='%{add_coordinator}'>engadir un/ha coordenador/a novo/a</a> ao grupo."
+    only_group_coordinator_remove_admin: "O grupo debe ter un/ha coordenador/a. Queres engadir outro/a coordenador/a ao grupo?"
+    permission_to_invite: "Non tes permisos para invitar novos/as membros."
+    position_not_updated: "Non se puido actualizar a posición."
+    settings_not_updated: "A túa configuración non se actualizou."
+    group_request_already_accepted: "Síntoo! Esta invitación é inválida ou xa foi aceptada."
+    group_request_invalid_token: "Síntoo! Esta clave non é válida."
+    group_private_or_not_found: "Grupo non atopado.\n\nPode que o grupo sexa privado. Se alguén che deu esta ligazón, pídelle que te invite ao grupo."
+    group_already_setup: "O grupo que tentar configurar xa existe."
+    passwords_did_not_match: "O contrasinal non coincide coa confirmación."
     proposal_already_exists: "Xa hai aberta unha proposta neste debate."
+    user_with_email_address_already_in_group: "Xa pertence ao grupo un/ha usuario/a con ese enderezo de correo."
+    you_have_already_requested_membership: "Xa solicitaches entrar neste grupo."
+    you_are_already_a_member_of_this_group: "Xa es un/ha membro deste grupo."
+    not_found: "Non se achou o ítem. Pode que o borrasen."
+  alert:
+    duplicate_email: "%{which_email} xa está no grupo."
+  notice:
+    new_contacts_imported: "Correcto! Podes escribir os nomes no campo inferior e nós suxeriremos os enderezos de correo."
+    admin_rights_removed: "Elimináronse os dereitos de coordenador/a de %{which_user}."
+    user_added: "Engadiuse a %{user_email_or_name} ao grupo."
+    new_user_added: "Engadirase a %{user_email_or_name} ao grupo despois de que creen unha conta en Loomio."
+    member_removed: "Membro eliminado/a."
+    membership_approved: "Entrada aprobada."
+    membership_request_canceled: "Solicitude de entrada cancelada."
+    membership_request_ignored: "Solicitude de entrada ignorada."
+    settings_updated: "Actualizouse a túa configuración."
+    user_made_admin: "Nomeouse coordenador/a a %{which_user}."
+    you_have_left_group: "Deixaches %{which_group}."
+    comment_deleted: "Comentario borrado."
+    invitations:
+      auto_added:
+        one: "Engadiuse 1 membro"
+        other: "Engadíronse %{count} membros"
   success:
     discussion_created: "Debate creado correctamente."
     discussion_deleted: "Debate eliminado correctamente."
