--- a/config/locales/frontpage.sl.yml
+++ b/config/locales/frontpage.sl.yml
@@ -4,12 +4,35 @@ sl:
       blog: 'Blog'
       contact: 'Kontakt'
       donate: 'Donirajte še danes'
+      try_it: 'Preizkusite'
       log_in: 'Prijava'
+      video: "Oglej si več o tem, kako deluje Loomio"
+      try_loomio_beta: 'Preizkusite Loomio beta'
+      check_out_loomio_beta: 'Preizkusi Loomio beta'
       more: 'Več'
       top: 'Vrh'
       public_groups: 'Javne skupine'
       terms: 'Pogoji'
       privacy: 'Zasebnost'
       services: 'Storitve'
+    hero:
+      head_html: 'Svet potrebuje boljši način za <strong> sprejemanje skupnih odločitve</strong>.'
+      desc_html: 'Loomio je brezplačna <a href="https://github.com/loomio/loomio">odprtokodna</a> programska oprema za vsakogar, kjerkoli, da sodeluje pri odločitvah, ki vplivajo nanj.'
+    product:
+      header_html: 'Ko slišimo <strong>vse glasove</strong>, sprejemamo  <strong>boljše odločitve</strong>.'
+      step1:
+        header: '1. Predebatiraj zadeve'
+        desc: 'Prični razpravo o čemerkoli, privabi prave ljudi. Deli različne poglede in razvij ideje skupaj.'
+      step2:
+        header: '2. Zgradi sporazum'
+        desc: 'Vsakdo lahko predlaga potek ukrepanja. Ljudje se lahko strinjajo, vzdržijo, ne strinjajo, ali zavračajo - tako lahko vidite, kako vsi čutijo in zakaj.'
+      step3:
+        header: '3. Odloči se skupaj'
+        desc: 'Razvijte predlog skupaj tako da ustreza vsem. Vsaka odločitev ima jasen cilj, tako vedno dobimo jasen rezultat.'
+    prototype:
+      header_html: "Že smo zgradili prototip in ljudje po vsem svetu delajo neverjetne stvari z njim"
+    ideals:
+      open:
+        desc: 'Loomiova koda je javna dobrina katero lahko kdorkoli poganja, berem, študira, spreminja in deli.'
     vision:
       header: 'Pomagajte nam vizijo spremeniti v resničnost.'
