--- a/config/locales/native_language_names.yml
+++ b/config/locales/native_language_names.yml
@@ -42,10 +42,12 @@ en:
     ar: العربية/عربي
     cmn: 官話
     hr: hrvatski
+    it-CH: Italiano (Switzerland)
     fi: Suomen kieli
     gl: galego
     'ga-IE': Gaeilge
     km: ភាសាខ្មែរ
+    lv: latviešu valoda
     mk: Македонски јазик
     mi: Maori
     'fa-IR': پارسی
