--- a/config/locales/frontpage.ru.yml
+++ b/config/locales/frontpage.ru.yml
@@ -23,6 +23,7 @@ ru:
       head_html: 'Этому миру нужны лучшие инструменты для
 
         <strong>совместного принятия решений</strong>.'
+      desc_html: 'Loomio безплатьное и <ahref="https://github.com/loomio/loomio">открыто</a> в всем участвовать в решениях.'
     product:
       header_html: 'Когда мы слышим все голоса, мы принимаем лучшие решения.'
       step1:
@@ -38,6 +39,7 @@ ru:
       header: 'Мы работаем по принципу краудфандинга, и таким образом достроим эту новую платформу и отдадим его в мир.'
     prototype:
       header_html: "Мы уже создали пробную версию, и множество людей со всего мира делают множество интересных вещей с помощью Лумио."
+      subhead_html: '<a href="%{try_loomio_link}">Пробовуете сейчас Loomio Beta</a>или <a href="%{donate_link}">можно поддерживать проэкт</a>чтобы помочь Loomio 1.0'
     mobile:
       header_html: 'Loomio 1.0 будет работать на любом мобильном устройстве со свободным программным обеспечением.'
     quote:
