--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -31,6 +31,25 @@ en:
   navbar:
     search_placeholder: 'Search for groups or threads'
 
+  notifications:
+    header: "Notifications"
+    new_discussion: "started a discussion"
+    new_motion: "created a proposal"
+    motion_closed:
+      by_user: "closed the proposal"
+      by_expiry: "Proposal has closed"
+    new_vote: "%{position} on the proposal"
+    new_comment: "commented on the discussion"
+    comment_liked: "liked your comment in the discussion"
+    user_mentioned: "mentioned you in a comment in"
+    membership_requested: "requested membership to"
+    membership_request_approved: 'approved your request to join'
+    user_added_to_group: "added you to the group"
+    motion_closing_soon: "Proposal is closing soon"
+    motion_blocked: "blocked the proposal"
+    motion_outcome_created: "published an outcome for the proposal"
+    motion_outcome_updated: "updated the outcome for the proposal"
+
   vote_form:
     i_agree: 'I agree'
     i_agree_details: 'I support this and want it to go ahead.'
