--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -45,9 +45,16 @@ en:
     select_position: 'Select position'
     statement_placeholder: 'Share your thoughts with the group.'
 
+  proposal_close_form:
+    close_proposal: 'Close {{proposalName}}'
+    helptext: 'Are you sure you want to close this proposal now?'
+    close_proposal_submit: 'Close proposal early'
+
   proposal_form:
     start_proposal: 'Start proposal'
     start_a_proposal: 'Start a proposal'
+    edit_proposal: 'Edit proposal'
+    edit_a_proposal: 'Edit {{proposalName}}'
     what_does_a_proposal_do: 'Proposals allow you to see how everyone feels about a particular course of action. Find out more.'
     title_placeholder: 'Eg: Go to the moon'
     title_label: 'Title'
@@ -78,6 +85,8 @@ en:
     started_by: 'Started by <strong>{{name}}</strong>'
     no_votes_yet: 'Nobody has voted on this proposal yet.'
     only_voter_is_you: 'No other members have voted yet.'
+    edit_proposal: 'Edit proposal'
+    close_proposal: 'Close proposal'
 
   proposal_position_yes: 'Agree'
   proposal_position_abstain: 'Abstain'
